--- a/урок 2-3/урок 2-3.html
+++ b/урок 2-3/урок 2-3.html
@@ -238,6 +238,8 @@
         //            a.push('x');
         //            console.log(a);
         //        }
+        
+    // как то так...
     </script>
 
 </head>
